plugins {
    id 'java'
    id 'io.quarkus'
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation 'io.quarkus:quarkus-rest-jackson'
    implementation 'io.quarkus:quarkus-spring-di'
    implementation 'io.quarkus:quarkus-spring-web'
    implementation 'io.quarkus:quarkus-spring-boot-properties'
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-rest'
    implementation 'io.quarkus:quarkus-config-yaml'
    // Fluxo AO VIVO de eventos de telemetria (Redis Streams). ADITIVO: o
    // telemetria_execucoes.jsonl continua sendo a fonte do dataset. O KRONOS
    // precisa subir e funcionar por inteiro com o Redis fora do ar — ver
    // RedisFluxoTelemetriaAdapter e o teste de degradacao.
    implementation 'io.quarkus:quarkus-redis-client'

    // Servidor MCP (Model Context Protocol) via transporte SSE/HTTP: expoe o
    // pipeline do KRONOS como ferramentas para clientes MCP (ex.: Claude Code)
    // no mesmo servidor web ja iniciado em modo dev (endpoint /mcp/sse).
    implementation 'io.quarkiverse.mcp:quarkus-mcp-server-sse:1.13.1'

    implementation 'org.springframework.boot:spring-boot-autoconfigure:3.3.0'

    implementation 'me.tongfei:progressbar:0.10.1'

    testImplementation 'io.quarkus:quarkus-junit'
    testImplementation 'io.rest-assured:rest-assured'

    // FASE D0 — harness de fitness arquitetural (Camada estatica). Artefato
    // plain (nao o archunit-junit5): usado com JUnit 5 comum + ClassFileImporter.
    // A primeira execucao prova a leitura de bytecode Java 25 (class file major 69).
    testImplementation 'com.tngtech.archunit:archunit:1.4.2'

    // Teste por PROPRIEDADE. Entrou em 2026-08-04 depois que o defeito da quebra \N
    // do ASS passou por 12 arquivos e a suite ficou verde: os testes de exemplo
    // congelavam os casos que alguem PENSOU em escrever, e o defeito morava no caso
    // que ninguem pensou. Medicao do dia: mutando a constante nos 12, so 2 arquivos
    // quebravam algum teste. Uma propriedade sorteia ONDE a quebra cai e encontra o
    // contraexemplo sozinha — que e o que faltava. Motor proprio na plataforma JUnit 5,
    // convive com o Jupiter sem excluir nada.
    testImplementation 'net.jqwik:jqwik:1.9.2'
}

group = 'org.traducao.projeto'
version = '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

test {
    // O worker de teste do Gradle nasce com 512m; a suíte completa (com os
    // @QuarkusTest subindo a aplicação) estoura o heap nesse padrão.
    maxHeapSize = '1g'

    // Redireciona a raiz dos artefatos operacionais do KRONOS (logs/,
    // relatorios/, cache/, backups/) para uma árvore descartável sob build/
    // (ignorada pelo Git) durante a suíte. Sem isto, os use cases que resolvem
    // caminhos relativos ao CWD gravavam na árvore versionada real — origem
    // dos relatorios/junit-* e da telemetria canônica alterada por testes.
    // Ver DiretorioBaseKronos.
    systemProperty 'kronos.dir.base',
        layout.buildDirectory.dir('tmp/kronos-tests').get().asFile.absolutePath

    // Propaga as chaves de benchmark do CLI para a JVM de teste. O Gradle NÃO repassa
    // -D automaticamente, então sem isto o harness de medição (que só liga com
    // -Dkronos.benchmark=true) é silenciosamente pulado — e "0 testes rodaram" tem a
    // mesma aparência de "tudo passou".
    // 'kronos.medicao' liga o harness de MEDICAO do acervo (src/test/.../medicao), que le o
    // cache/ real e nao roda na suite normal; 'kronos.medicao.cache' aponta outra raiz.
    // 'kronos.aplicar.reforco' e a trava DUPLA da unica operacao destes harnesses que ESCREVE no
    // acervo: alem da config do proprio pipeline, exige uma frase literal na linha de comando,
    // para que nenhum `gradlew test` distraido reescreva 20 MB de traducao pronta.
    ['kronos.benchmark', 'kronos.libre.url', 'kronos.benchmark.cache',
     'kronos.medicao', 'kronos.medicao.cache', 'kronos.medicao.obra', 'kronos.medicao.ass',
     'kronos.comparacao', 'kronos.comparacao.obra', 'kronos.comparacao.limite',
     'kronos.aplicar.reforco',
     // 'kronos.aplicar.acentos' e a mesma trava dupla para a reposicao de acentos nas
     // legendas ja traduzidas; 'kronos.acervo' aponta outra raiz que nao C:\animes.
     // Medido em 07/08/2026: sem estas duas na lista, o -D da linha de comando fica na JVM
     // do Gradle e nao chega na de teste — o harness rodou em ENSAIO, imprimiu contagem e
     // exit 0, e "nao gravou nada" ficou com a mesma cara de "gravou".
     'kronos.aplicar.acentos', 'kronos.acervo',
     'correcao-cache.reforco-terminologia-aplicar-habilitado'].each { chave ->
        if (System.getProperty(chave) != null) {
            systemProperty chave, System.getProperty(chave)
        }
    }
}

quarkusDev {
    // Alinha o charset do logger do Quarkus (JBoss LogManager) com o System.out
    // UTF-8 do Application.java; sem isso o terminal/console-web.log mistura o
    // codepage do console Windows com UTF-8 e os acentos viram mojibake.
    def args = ['-Dfile.encoding=UTF-8', '-Dstdout.encoding=UTF-8', '-Dstderr.encoding=UTF-8']

    // SANDBOX operacional: kronos.dir.base redireciona cache/, logs/, relatorios/ e
    // backups/ para outra raiz (ver DiretorioBaseKronos, que le a property a cada
    // chamada e vale em producao, nao so em teste). Existe para TROCAR DE MODELO sem
    // perder o cache do modelo atual: modeloLlm e um dos seis campos de
    // mesmaProveniencia(), entao carregar outro LLM faz o acervo inteiro deixar de ser
    // reaproveitado. Com o sandbox, cada modelo escreve o seu proprio cache.
    //
    // O Gradle NAO repassa -D para a JVM forkada do quarkusDev; sem esta linha a
    // property fica na JVM do Gradle e a aplicacao nunca a enxerga.
    //
    // ATENCAO: isto protege os ARTEFATOS OPERACIONAIS. A legenda .ass de saida vai para
    // a pasta escolhida na UI e NAO e redirecionada — aponte outra pasta la tambem.
    if (System.getProperty('kronos.dir.base') != null) {
        args << "-Dkronos.dir.base=${System.getProperty('kronos.dir.base')}".toString()
    }
    jvmArgs = args
    // O compilador do LIVE-RELOAD não herda o options.encoding do compileJava:
    // sem isto, literais com acento recompilados a quente corrompem (mojibake
    // observado em 2026-07-09 num literal com "í" após hot-reload).
    compilerArgs = ['-encoding', 'UTF-8']
}

compileTestJava {
    options.encoding = 'UTF-8'
}

sourceSets {
    main {
        resources {
            exclude 'static/**'
        }
    }
}

processResources {
    from('src/main/resources/static') {
        into 'META-INF/resources'
    }
}
